[package]
name = "gameclockbone"
version = "0.1.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
futures-timer = "3.0.2"
iced = "0.1.1"
iced_futures = "*"
log = "0.4.11"
log4rs = "0.13.0"
